objects/Jobs__c.object
<CustomObject>
    <fields>
        <fullName>ADP_File_Number__c</fullName>
        <label>ADP File Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <inlineHelpText>Please use this section to provide information about allocation splits if this person will be working in more than one department.</inlineHelpText>
        <label>Department Allocation Split</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Source__c</fullName>
        <label>Applicant Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Comments__c</fullName>
        <label>Approval Submission Comments (optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Hours_Week__c</fullName>
        <inlineHelpText>Please enter how many hours per week on average you expect this role to work. (1 through 40)</inlineHelpText>
        <label>Average Hours/Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Accepted_Offer__c</fullName>
        <label>Bonus (Accepted Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Candidate_Email__c</fullName>
        <label>Candidate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name (Accepted Offer)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Phone__c</fullName>
        <label>Candidate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>Please select the appropriate Class this employee should be coded to. If the employee is coded to the Amusements department, please select &quot;Amusements&quot;.  If an employee primarily works for our Gaming operations, please select &quot;Gaming&quot;.  If the employee primarily works on ATMs, please select &quot;ATM &amp; Other&quot;.  For SG&amp;A employees, please select Gaming.</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Amusement</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>ATM &amp; Other Revenue</fullName>
                    <isActive>false</isActive>
                    <label>ATM &amp; Other Revenue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Credit_Card_Needed__c</fullName>
        <label>Company Credit Card Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compensation_Accepted_Offer__c</fullName>
        <label>Compensation (Accepted Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <inlineHelpText>Please select the appropriate cost center (region) this employee will primarily work out of.  
Note: &quot;Illinois&quot; is reserved for SG&amp;A (non - operations) employees as well as Operations leadership employees that can&apos;t be coded to a specific region.  
&quot;Allocate Across All&quot; is reserved for relationship managers.
Relationship Management Positions must be allocated to the Illinois Cost Center.</inlineHelpText>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Burr Ridge</fullName>
                </value>
                <value>
                    <fullName>Champ/Wats</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Tinley Park</fullName>
                </value>
                <value>
                    <fullName>All Across</fullName>
                    <isActive>false</isActive>
                    <label>All Across</label>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                    <isActive>false</isActive>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>Glen Carbon</fullName>
                    <isActive>false</isActive>
                    <label>Glen Carbon</label>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                    <isActive>false</isActive>
                    <label>Lincoln</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Filled__c</fullName>
        <label>Date Filled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Job_Was_Posted__c</fullName>
        <description>updated by automation to record Date Job Was Posted</description>
        <label>Date Job Was Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DepartmentId__c</fullName>
        <formula>Department_Lookup__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DepartmentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the Department this employee should be coded to.  If the employee will support more than one department, please select the primary department this employee should be coded to and add additional applicable departments and applicable percentage split in the description box.</inlineHelpText>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Location__c</fullName>
        <inlineHelpText>IL employees - please select Accel Entertainment, Inc. 
GA employees, please select 	Bulldog Gaming LLC - Georgia
IA employees, please select Hawkeye Gaming LLC – Iowa
NE employees, please select Husker Gaming LLC – Nebraska</inlineHelpText>
        <label>Entity/Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel Entertainment, Inc.</fullName>
                </value>
                <value>
                    <fullName>Bulldog Gaming LLC - Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawkeye Gaming LLC – Iowa</fullName>
                </value>
                <value>
                    <fullName>Husker Gaming LLC – Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Human_Resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exemption_Status__c</fullName>
        <label>Exemption Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Salary</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                    <isActive>false</isActive>
                    <label>Exempt</label>
                </value>
                <value>
                    <fullName>Non-Exempt</fullName>
                    <isActive>false</isActive>
                    <label>Non-Exempt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Job_Title__c</fullName>
        <label>Existing Job Title?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explanation_of_Hiring_Need__c</fullName>
        <label>Explanation of Hiring Need</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Explanation_of_Inactive_Requisition__c</fullName>
        <inlineHelpText>Provide a reason for why the job is no longer needed.</inlineHelpText>
        <label>Explanation of Inactive Requisition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FTE_Count__c</fullName>
        <inlineHelpText>Full Time Equivalent; take average number of hours/week and divide by 40</inlineHelpText>
        <label>FTE Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fill_By_Date__c</fullName>
        <label>Fill By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Human_Resources3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hiring_Reason__c</fullName>
        <label>Hiring Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Replacement - Promotion</fullName>
                    <label>Promotion</label>
                </value>
                <value>
                    <fullName>Replacement - Transfer Department</fullName>
                    <label>Transfer</label>
                </value>
                <value>
                    <fullName>Replacement - Separation</fullName>
                    <label>Replacement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Human_Resources_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Human Resources Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Human_Resources_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Human Resources Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Human_Resources2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Budget__c</fullName>
        <label>In Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instructions_for_Approval__c</fullName>
        <formula>&quot;Before you click Save, please ensure that you have reviewed all the Job Essentials products in the related-list on the right-hand side of your screen. Remove any that do not apply by select Delete from the dropdown next to the item, or add more items by New from the dropdown.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Essentials_Filled_Count__c</fullName>
        <label>Job Essentials Filled Count</label>
        <summaryFilterItems>
            <field>Job_Requisition_Essentials__c.Completed_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Job_Requisition_Essentials__c.Jobs__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_Essentials_Rollup_Count__c</fullName>
        <label>Job Essentials Rollup Count</label>
        <summaryForeignKey>Job_Requisition_Essentials__c.Jobs__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_Essentials_Status__c</fullName>
        <formula>If( Job_Essentials_Rollup_Count__c -  Job_Essentials_Filled_Count__c = 0,&quot;Items Filled&quot;,&quot;Awaiting Job Essentials&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Essentials Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_No_Longer_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job No Longer Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Posting</fullName>
                    <label>Approved: Pending Posting</label>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Title</label>
        <referenceTo>Job_Title__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Candidate_s_Name__c</fullName>
        <description>updated via workflow rule Last Candidate and used in the email alert that goes out to job owner when job status is updated to Posted from Filled</description>
        <label>Last Candidate&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_to_register_as_employee_sales_agent__c</fullName>
        <label>Need to register as employee sales agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Headcount_Reason__c</fullName>
        <inlineHelpText>Please provide supporting information as needed in the Explanation of Hiring Need field.</inlineHelpText>
        <label>New Headcount Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental growth assumptions; if so, provide a benchmark measurement tool (ex. 1 new hire every 500 new locations)</fullName>
                </value>
                <value>
                    <fullName>A new initiative that is underway that should increase bottom line</fullName>
                </value>
                <value>
                    <fullName>A cost savings project (ex. reduce the need for service techs), and if so, what is the timing and monthly savings that each new hire should provide?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Hire_Will_Report_To__c</fullName>
        <label>New Hire Will Report To:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Entity_Location__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Ridge</fullName>
                </value>
                <value>
                    <fullName>Burr Ridge</fullName>
                </value>
                <value>
                    <fullName>Burr Ridge Amusements</fullName>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Dubuque</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Marietta</fullName>
                </value>
                <value>
                    <fullName>North Platte</fullName>
                </value>
                <value>
                    <fullName>Omaha</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
                <value>
                    <fullName>Rockford Amusements</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                    <label>Rockford West</label>
                </value>
                <value>
                    <fullName>Savannah</fullName>
                </value>
                <value>
                    <fullName>Sioux City</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Springfield Amusements</fullName>
                </value>
                <value>
                    <fullName>Tinley Park</fullName>
                </value>
                <value>
                    <fullName>Watseka</fullName>
                </value>
                <value>
                    <fullName>LaSalle</fullName>
                    <isActive>false</isActive>
                    <label>LaSalle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Job_Applications__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiting_Pool__c</fullName>
        <label>Recruiting Pool</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal THEN external</fullName>
                </value>
                <value>
                    <fullName>Internal AND external</fullName>
                </value>
                <value>
                    <fullName>External only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_City__c</fullName>
        <label>Region &amp; City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replacement_Reason__c</fullName>
        <description>When a job is created because an employee is being replaced, this field indicates the reason for the replacement.</description>
        <inlineHelpText>Why is the previous employee being replaced?</inlineHelpText>
        <label>Replacement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replacement - Promotion</fullName>
                </value>
                <value>
                    <fullName>Replacement - Separation</fullName>
                </value>
                <value>
                    <fullName>Replacement - Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replacing_name_of_person__c</fullName>
        <label>Replacing (name of person)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requesting Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Human_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requisition_Approved_Date__c</fullName>
        <label>Requisition Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Incentive_Plan_Sent_On__c</fullName>
        <label>Sales Incentive Plan Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Incentive_Plan__c</fullName>
        <description>For any new values added, the validation rule has to be updated as well</description>
        <label>Sales Incentive Plan (if applicable)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDM Commissions Agreement IL</fullName>
                </value>
                <value>
                    <fullName>BDM Commissions Agreement GA</fullName>
                </value>
                <value>
                    <fullName>RM Commissions Agreements</fullName>
                </value>
                <value>
                    <fullName>GA AM Incentive</fullName>
                </value>
                <value>
                    <fullName>SDR Incentives</fullName>
                </value>
                <value>
                    <fullName>NE BDM Incentive</fullName>
                </value>
                <value>
                    <fullName>NE AM Incentive</fullName>
                </value>
                <value>
                    <fullName>NC BDM Incentive</fullName>
                </value>
                <value>
                    <fullName>Other Commission Agreement</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift_Hours__c</fullName>
        <label>Shift Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shift</label>
        <referenceTo>Shift</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Accepted_Offer__c</fullName>
        <label>Start Date (Accepted Offer)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submit_for_Approval_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Reason__c</fullName>
        <description>When a job is created because an employee is being transferred, this field indicates where/how the employee is being transferred.</description>
        <inlineHelpText>Why/where is the employee being transferred?</inlineHelpText>
        <label>Transfer Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Department Transfer</fullName>
                </value>
                <value>
                    <fullName>Regional Transfer</fullName>
                </value>
                <value>
                    <fullName>Same Department – New Position</fullName>
                </value>
                <value>
                    <fullName>State Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-Time</fullName>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Schedule__c</fullName>
        <label>Work Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st shift</fullName>
                </value>
                <value>
                    <fullName>2nd shift</fullName>
                </value>
                <value>
                    <fullName>3rd shift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Jobs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>Department_Lookup__c</columns>
        <columns>Entity_Location__c</columns>
        <columns>Office__c</columns>
        <columns>Cost_Center__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Start_Date_Accepted_Offer__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Replacing_name_of_person__c</columns>
        <columns>Applicant_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All</fullName>
        <columns>Recruiter__c</columns>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>Department_Lookup__c</columns>
        <columns>Entity_Location__c</columns>
        <columns>Office__c</columns>
        <columns>Cost_Center__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Start_Date_Accepted_Offer__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Replacing_name_of_person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Status__c</field>
            <operation>notEqual</operation>
            <value>Filled</value>
        </filters>
        <filters>
            <field>Job_No_Longer_Needed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Copy of All</label>
        <sharedTo>
            <group>Human_Resources</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Filled_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Start_Date_Accepted_Offer__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Department_Lookup__c</columns>
        <columns>Entity_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Jobs__c.Job_Posting</value>
        </filters>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>Filled</value>
        </filters>
        <filters>
            <field>Start_Date_Accepted_Offer__c</field>
            <operation>greaterThan</operation>
            <value>6/30/2021</value>
        </filters>
        <filters>
            <field>Job_No_Longer_Needed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Filled Jobs</label>
        <sharedTo>
            <group>Human_Resources</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internal_Transfers</fullName>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>Department_Lookup__c</columns>
        <columns>Office__c</columns>
        <columns>Cost_Center__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Start_Date_Accepted_Offer__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Replacing_name_of_person__c</columns>
        <columns>Applicant_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>Filled</value>
        </filters>
        <filters>
            <field>Applicant_Source__c</field>
            <operation>equals</operation>
            <value>Internal Candidate</value>
        </filters>
        <label>Internal Transfers</label>
    </listViews>
    <listViews>
        <fullName>Jobs_Finance_Approvals_Jobs</fullName>
        <filterScope>Queue</filterScope>
        <label>Jobs: Finance Approvals</label>
        <queue>Jobs_Finance_Approvals</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jobs_HR_Approvals_Jobs</fullName>
        <filterScope>Queue</filterScope>
        <label>Jobs: HR Approvals</label>
        <queue>Jobs_HR_Approvals</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>